canvasのzoomボタンにactiveを追加

--- a/css/style.css
+++ b/css/style.css
@@ -1569,7 +1569,7 @@ z-index memo
   text-shadow: 0 0 4px black;
   pointer-events: none;
 }
-.p-canvas__btn--zoom {
+.p-canvas__btn--zooms {
   background-color: var(--background--dark);
   border: 2px solid var(--white);
   border-radius: 0.5rem;
@@ -1579,13 +1579,19 @@ z-index memo
   align-items: center;
   gap: 1vh;
 }
-.p-canvas__btn--zoom button {
+.p-canvas__btn--zooms button {
   padding: 0;
 }
-.p-canvas__btn--zoom button img {
+.p-canvas__btn--zooms button img {
   width: 10vh;
   height: auto;
   pointer-events: none;
+}
+.p-canvas__btn--zoom {
+  border-radius: 0.5rem;
+}
+.p-canvas__btn--zoom:active {
+  background: rgba(255, 255, 255, 0.2);
 }
 .p-canvas__btn--zoomLine {
   width: 70%;
