--- a/sass/object/project/_p-canvas.scss
+++ b/sass/object/project/_p-canvas.scss
@@ -17,29 +17,6 @@
       bottom: 0;
       z-index: 128;
     }
-/*
-    &--draw {
-      width: 100%;
-      height: 100%;
-      position: absolute;
-      top: 0;
-      left: 0;
-      right: 0;
-      bottom: 0;
-      z-index: 132;
-    }
-
-    &--stamp {
-      width: 100%;
-      height: 100%;
-      position: absolute;
-      top: 0;
-      left: 0;
-      right: 0;
-      bottom: 0;
-      z-index: 136;
-    }
-*/
   }
 
   &__zoom {
@@ -298,15 +275,14 @@
       }
 
       img {
-        width: 5vw;
-        max-width: 10vh;
+        width: 8vh;
+        max-width: 5vw;
       }
 
       .playerName {
         width: 5vw;
         max-width: 10vh;
         height: 1.5rem;
-        //font-family: 'variableFont';
         font-size: clamp(1em, 1.5vw, 2.5em);
         word-break: keep-all;
         text-align: center;
