--- a/css/style.css
+++ b/css/style.css
@@ -1490,42 +1490,56 @@ z-index memo
 .c-modal__mapSetting {
   width: 96vw;
   height: 96vh;
-  padding: 2vh 7vw 2vh 2vw;
+  padding: 2vh 5vw 2vh 5vw;
   background-color: var(--background--dark);
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 2vw;
+  gap: 2vh;
   position: fixed;
   top: 2vh;
   left: 2vw;
+  right: 2vw;
+  bottom: 2vh;
   z-index: 600;
 }
 .c-modal__mapSetting .c-modal__mapTable {
   width: 100%;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-around;
-  gap: 2vw;
+  height: 100%;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: repeat(4, 23%);
+  justify-content: center;
+  align-items: center;
+  gap: 2vh;
+  /*
+  .c-modal__map {
+    border: 0.5vw solid var(--white);
+    position: relative;
+
+    p {
+      color: var(--white);
+      text-shadow: 0 0 2px var(--dark);
+      position: absolute;
+      right: 0;
+      bottom: 0;
+      z-index: 616;
+    }
+    img {
+      width: 16vw;
+      min-width: 5rem;
+      height: auto;
+      object-fit: contain;
+    }
+  }
+    */
 }
 .c-modal__mapSetting .c-modal__mapTable .c-modal__map {
-  border: 1vw solid var(--white);
-  position: relative;
-}
-.c-modal__mapSetting .c-modal__mapTable .c-modal__map p {
-  color: var(--white);
-  text-shadow: 0 0 2px var(--dark);
-  position: absolute;
-  right: 0;
-  bottom: 0;
-  z-index: 616;
-}
-.c-modal__mapSetting .c-modal__mapTable .c-modal__map img {
-  width: 16vw;
-  min-width: 5rem;
-  height: auto;
-  -o-object-fit: contain;
-     object-fit: contain;
+  width: auto;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .c-modal__floorSetting {
   padding: 4vh 8vw;
