タッチ操作に対応

--- a/sass/foundation/_base.scss
+++ b/sass/foundation/_base.scss
@@ -26,9 +26,17 @@ body {
   -webkit-user-select: none; // Safari用 
   user-select: none;         // 標準
 
+  touch-action: none;
+  -webkit-touch-callout: none;
+
   &:has(dialog[open]) {
     overflow: hidden;
   }
+}
+
+img {
+  touch-action: none;
+  -webkit-touch-callout: none;
 }
 
 dialog {
