--- a/css/style.css
+++ b/css/style.css
@@ -130,9 +130,16 @@ body {
   -webkit-user-select: none;
   -moz-user-select: none;
        user-select: none;
+  touch-action: none;
+  -webkit-touch-callout: none;
 }
 body:has(dialog[open]) {
   overflow: hidden;
+}
+
+img {
+  touch-action: none;
+  -webkit-touch-callout: none;
 }
 
 dialog {
