--- a/sass/object/component/_c-map.scss
+++ b/sass/object/component/_c-map.scss
@@ -16,7 +16,7 @@
   &__frame {
     width: 100%;
     height: 100%;
-    border: 0.5rem solid #fff;
+    border: 1.5dvh solid #fff;
     position: absolute;
     top: 0;
     left: 0;
@@ -84,16 +84,16 @@
   }
 
   &__active {
-    padding-top: 50%;
-    width: calc(100% - 1rem);
-    height: calc(100% - 1rem);
+    padding-bottom: 1dvh;
+    width: calc(100% - 3dvh);
+    height: calc(100% - 3dvh);
     background: rgba(0, 0, 0, 0);
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: flex-end;
     position: absolute;
-    top: 0.5rem;
-    left: 0.5rem;
+    left: 1.5dvh;
+    bottom: 1.5dvh;
     z-index: 12;
 
     p {
@@ -155,15 +155,15 @@
   }
 
   .c-map__name {
-    width: calc(100% - 1rem);
-    height: calc(100% - 1rem);
+    width: calc(100% - 3dvh);
+    height: calc(100% - 3dvh);
     background: rgba(0, 0, 0, 0);
     display: flex;
     justify-content: end;
     align-items: end;
     position: absolute;
-    top: 0.5rem;
-    left: 0.5rem;
+    top: 1.5dvh;
+    left: 1.5dvh;
     z-index: 12;
 
   p {
