--- a/sass/object/project/_p-board.scss
+++ b/sass/object/project/_p-board.scss
@@ -2,6 +2,7 @@
 
 .p-board {
   &__tools {
+    width: 100%;
     padding: 1vh;
     border: 2px solid var(--white);
     @include border-radius--col;
@@ -31,7 +32,7 @@
     }
 
     p {
-      width: 10vh;
+      max-width: 10vh;
       text-overflow: ellipsis;
       overflow: hidden;
       white-space: nowrap;
@@ -40,7 +41,8 @@
     }
 
     img {
-      width: 10vh;
+      width: 6dvw;
+      max-width: 10dvh;
       height: auto;
       object-fit: contain;
       pointer-events: none;
@@ -56,8 +58,10 @@
   }
 
   &__option {
-    width: 90%;
-    height: 5vh;
+    width: 5dvw;
+    max-width: 10dvh;
+    height: 5dvh;
+    max-height: 4dvw;
     border: 1px solid var(--white);
     display: flex;
     justify-content: center;
