--- a/sass/object/project/_p-canvas.scss
+++ b/sass/object/project/_p-canvas.scss
@@ -53,7 +53,8 @@
         padding: 0;
 
         img {
-          width: 10vh;
+          width: 10dvh;
+          max-width: 8dvw;
           height: auto;
           pointer-events: none;
         }
