メンテナンス中表示を追加

--- a/css/style.css
+++ b/css/style.css
@@ -2008,6 +2008,18 @@ z-index memo
   font-size: clamp(1em, 1.5vw, 2.5em);
   word-break: break-all;
 }
+.p-howToUse__maintenance {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid red;
+}
+.p-howToUse__maintenance p {
+  font-size: clamp(1em, 2.5vw, 4.5em);
+}
 .p-howToUse__header {
   position: absolute;
   top: 2vh;
