--- a/css/style.css
+++ b/css/style.css
@@ -1992,7 +1992,7 @@ z-index memo
 .p-howToUse {
   width: 100%;
   height: 100%;
-  background: rgba(0, 0, 0, 0.5);
+  background: rgba(0, 0, 0, 0.6);
   display: none;
   position: absolute;
   top: 0;
@@ -2097,19 +2097,17 @@ z-index memo
   align-items: flex-end;
   padding: 6vh 0;
 }
+.p-howToUse__content p {
+  line-height: 1.2em;
+}
 .p-howToUse .pageContent--active {
   display: flex;
 }
 .p-howToUse__left--explanation {
-  margin-left: 12%;
   display: flex;
   align-items: center;
-}
-.p-howToUse__left--zoom {
-  margin-top: -7vh;
-}
-.p-howToUse__left--legend {
-  margin-top: -2vh;
+  position: absolute;
+  z-index: 514;
 }
 .p-howToUse__left--rect {
   width: 100%;
@@ -2125,9 +2123,11 @@ z-index memo
   transform: rotate(-3deg);
 }
 .p-howToUse__right--explanation {
-  margin-right: 12%;
   display: flex;
+  flex-direction: row-reverse;
   align-items: center;
+  position: absolute;
+  z-index: 514;
 }
 .p-howToUse__rect--legendMap {
   border: 2px solid var(--white);
@@ -2156,9 +2156,20 @@ z-index memo
 }
 .p-howToUse__canvas--explanation {
   display: flex;
-  align-items: flex-start;
+  align-items: center;
   position: absolute;
   z-index: 537;
+}
+.p-howToUse__canvas--explanation img {
+  width: 10svw;
+}
+.p-howToUse__canvas--explanation p {
+  padding-right: 5svw;
+}
+.p-howToUse__canvas--operatorButton {
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
 }
 
 .u-font--ja {
