--- a/sass/object/project/_p-howToUse.scss
+++ b/sass/object/project/_p-howToUse.scss
@@ -3,7 +3,7 @@
 .p-howToUse {
   width: 100%;
   height: 100%;
-  background: rgba(0, 0, 0, 0.5);
+  background: rgba(0, 0, 0, 0.6);
   display: none;
   position: absolute;
   top: 0;
@@ -126,6 +126,10 @@
       align-items: flex-end;
       padding: 6vh 0;
     }
+
+    p {
+      line-height: 1.2em;
+    }
   }
 
   .pageContent--active {
@@ -134,17 +138,10 @@
 
   &__left {
     &--explanation {
-      margin-left: 12%;
       display: flex;
       align-items: center;
-    }
-
-    &--zoom {
-      margin-top: -7vh;
-    }
-
-    &--legend {
-      margin-top: -2vh;
+      position: absolute;
+      z-index: 514;
     }
 
     &--rect {
@@ -165,9 +162,11 @@
 
   &__right {
     &--explanation {
-      margin-right: 12%;
       display: flex;
+      flex-direction: row-reverse;
       align-items: center;
+      position: absolute;
+      z-index: 514;
     }
   }
 
@@ -197,9 +196,23 @@
   &__canvas {
     &--explanation {
       display: flex;
-      align-items: flex-start;
+      align-items: center;
       position: absolute;
       z-index: 537;
+
+      img {
+        width: 10svw;
+      }
+
+      p {
+        padding-right: 5svw;
+      }
+    }
+
+    &--operatorButton {
+      display: flex;
+      justify-content: center;
+      align-items: flex-end;
     }
   }
 }
